backend/vulnerability_analysis/testing/hof2/segments/klee-out-0/messages.txt
KLEE: Using STP solver backend
KLEE: SAT solver: MiniSat
KLEE: Deterministic allocator: Using quarantine queue size 8
KLEE: Deterministic allocator: globals (start-address=0x7ff951600000 size=10 GiB)
KLEE: Deterministic allocator: constants (start-address=0x7ff6d1600000 size=10 GiB)
KLEE: Deterministic allocator: heap (start-address=0x7ef6d1600000 size=1024 GiB)
KLEE: Deterministic allocator: stack (start-address=0x7ed6d1600000 size=128 GiB)
KLEE: ERROR: testing/hof5/segments/segment_1_klee.c:19: failed external call: compute_hash
KLEE: NOTE: now ignoring this error at this location
KLEE: ERROR: libc/string/strcpy.c:27: memory error: out of bound pointer
KLEE: NOTE: now ignoring this error at this location
